# root_finding

./: .gitignore  .nojekyll  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DEVELOPMENT.html  README.md  _quarto.yml  environment.yml  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yml  docs.yml  pytest.yml
docs/: index.html  index.qmd  objects.json  project-retrospective.html  project-retrospective.qmd  reference.html  reference.qmd  tutorial.html  tutorial.qmd
docs/reference/: bisection.bisection.bisection.html  bisection.bisection.bisection.qmd  bisection.bisection_find_roots.bisection_find_roots.html  bisection.bisection_find_roots.bisection_find_roots.qmd  hybrid.html  hybrid.hybrid.html  hybrid.hybrid.qmd  hybrid.qmd  index.html  index.qmd  newton1d.html  newton1d.newton1d.html  newton1d.newton1d.qmd  newton1d.qmd  plot_root.html  plot_root.plot_root.html  plot_root.plot_root.qmd  plot_root.qmd
site_libs/bootstrap/: bootstrap.min.css
src/root_finding/: __init__.py  bisection.py  hybrid.py  newton1d.py  plot_root.py
src/root_finding/bisection/: __init__.py  bisection.py  bisection_find_roots.py
tests/unit/: test_bisection.py  test_bisection_find_roots.py  test_example.py  test_hybrid.py  test_newton1d.py  test_plot_root.py
